syntax = "proto3";
package main;
option go_package = "pb/";

message RowInfo {
    int64 diff_line_idx = 1;
    repeated int64 col_number = 2;
}

message DbInfo{
    int64 from_line_number = 1;
    int64 from_line_cnt = 2;
    int64 to_line_number = 3;
    int64 to_line_cnt = 4;
    repeated RowInfo row_info = 5;
}

message DiffDbTable{
    repeated DbInfo diff_db_info = 1;
}

message RespInfo {
    int64 from_line_number = 1;
    int64 from_line_cnt = 2;
    int64 to_line_number = 3;
    int64 to_line_cnt = 4;
}

message DiffResp{
    repeated RespInfo diff_resp_info = 1;
}